[package]
name = "secret-u"
version = "0.1.0"
authors = ["Christopher Haster <christopher.haster@arm.com>"]
edition = "2018"

[features]
default = [
    "opt-color-slots",
    "opt-schedule-slots",
    "opt-fold-consts",
    "opt-fold-nops",
    "opt-compress-consts",
    "bitslice-simplify-bdd"
]

# color slots in order to reuse slots, you probably want this
# enabled, but it can be disabled for debugging
opt-color-slots = []
# reorder branches of instruction sequences to minimize register
# pressure
opt-schedule-slots = []
# perform constant folding during compilation, note this run
# small chunks of bytecode in the vm to do the folding
opt-fold-consts = []
# fold simple nops as a part of constant folding, these are
# expressions such as x+0, x-0, x<<0, x*1, etc
opt-fold-nops = ["opt-fold-consts"]
# find compressed const representations, such as `u8x16.extend_const8_s 0xfe`
# instead of `u128.move_const_s 0xfffffffffffffffffffffffffffffffe`, this
# reduces bytecode size and may result in faster code
opt-compress-consts = []

# show ast before compilation
debug-ast = []
# show bytecode output by compilation
debug-bytecode = []
# show VM execution
debug-trace = []
# show total number of instructions executed after each exec
debug-cycle-count = []
# show proc macro generation
debug-proc-macros = ["secret-u-macros/debug-proc-macros"]
# check internal refs correctly return to 0, note this is very expensive
debug-check-refs = []

# simplify by DeMorgan identities
bitslice-simplify-identities = ["secret-u-macros/bitslice-simplify-identities"]
# simplify by BDD (use this if you want compilation to take forever
bitslice-simplify-bdd = ["secret-u-macros/bitslice-simplify-bdd"]

# use bitslice_table in examples instead of shuffle_tables, shuffle_tables
# is considerably faster to compile, but likely slower to execute, so
# shuffle_tables is prefered for development
example-bitslice-tables = []


[dependencies]
secret-u-macros = { path = "secret-u-macros", default-features = false }
thiserror = "1.0.25"
paste = "1.0.5"
aligned-utils = "1.0.2"
num-bigint = "0.4.0"
num-traits = "0.2.11"
