[package]
name = "secret-u-macros"
description = "Indirect crate for proc_macros"
authors = ["Christopher Haster <christopher.haster@arm.com>"]
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[features]
debug-proc-macros = []
debug-internal-proc-macros = []
# simplify by DeMorgan identities
bitslice-simplify-identities = []
# simplify by BDD (use this if you want compilation to take forever
bitslice-simplify-bdd = []

[dependencies]
syn = {version="1.0.73", features=["full"]}
quote = "1.0.9"
proc-macro2 = "1.0.27"
darling = "0.12.4"
boolean_expression = "0.4.4"
evalexpr = "6.4.0"
