[package]
name = "secret-u-macros"
description = "Indirect crate for proc_macros"
authors = ["Christopher Haster <christopher.haster@arm.com>"]
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[features]
debug-proc-macros = []
debug-internal-proc-macros = []
# simplify by DeMorgan identities
bitslice-simplify-identities = []
# simplify by BDD (use this if you want compilation to take forever
bitslice-simplify-bdd = []

# Dependent crates should declare the minimum integer size required for
# compilation, as this allows secret-u to only compile what is needed,
# significantly decreasing compile-times. The total minimum is determined by
# secret-u's build.rs.
#
# Rust unfortunately doesn't have a way to parameterize features with variables,
# fortunately there's only log2(2^2^4) options here, so we can manually specify
# the range of possible options.
#
# Note that you only need to specify one of these features, whichever one is
# has the largest integer size required.
#
# By default integer types up to u128 are enabled (matching Rust's
# primitive types).
#
u8      = []
u16     = []
u32     = []
u64     = []
u128    = []
u256    = []
u512    = []
u1024   = []
u2048   = []
u4096   = []
u8192   = []
u16384  = []
u32768  = []
u65536  = []
u131072 = []
u262144 = []

# Dependent crates should declare the minimum lane count required for
# compilation, as this allows secret-u to only compile what is needed,
# significantly decreasing compile-times. The total minimum is determined by
# secret-u's build.rs.
#
# Rust unfortunately doesn't have a way to parameterize features with variables,
# fortunately there's only log2(2^2^4) options here, so we can manually specify
# the range of possible options.
#
# Note that you only need to specify one of these features, whichever one is
# has the largest lane count required.
#
# By default only a single lane is enabled.
#
x1     = []
x2     = []
x4     = []
x8     = []
x16    = []
x32    = []
x64    = []
x128   = []
x256   = []
x512   = []
x1024  = []
x2048  = []
x4096  = []
x8192  = []
x16384 = []
x32768 = []

[dependencies]
syn = {version="1.0.73", features=["full"]}
quote = "1.0.9"
proc-macro2 = "1.0.27"
darling = "0.12.4"
boolean_expression = "0.4.4"
evalexpr = "6.4.0"
